// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css prop react basic 1`] = `
.css-xs9rh7 {
  color: red;
  font-size: 1px;
}

<p
  className="css-xs9rh7"
>
  hello world
</p>
`;

exports[`css prop react kitchen sink 1`] = `
.css-tocw18 {
  display: -webkit-box,-moz-box,-ms-flexbox,-webkit-flex,flex;
  font-weight: bold;
  justify-content: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.css-2sukuz {
  font-size: 6px;
  color: red;
}

.css-bithoy {
  color: blue;
}

.css-1pyxnyx {
  display: -webkit-inline-box,-moz-inline-box,-ms-inline-flexbox,-webkit-inline-flex,inline-flex;
}

.css-c5xqxn {
  color: red;
  border-radius: 5px;
}

.css-c5xqxn:hover {
  font-weight: bold;
  color: gray;
}

<div
  className="css__legacy-stuff css-tocw18"
>
  <h1
    className="css-2sukuz"
  >
    BOOM
  </h1>
  <p
    className="test_class1 css-bithoy"
  >
    Hello
  </p>
  <p
    className="test_class1 test___class45 css-1pyxnyx"
  >
    World
  </p>
  <p
    className="css-c5xqxn"
  >
    hello world
  </p>
</div>
`;

exports[`css prop react string expression 1`] = `
.css-1ylcmay {
  color: red;
  background: blue;
  font-size: 48px;
}

<p
  className="css-1ylcmay"
>
  hello world
</p>
`;
